Check point ahead of refactor.
Signed-off-by: Jeff Schmidt <jeffrey.schmidt@swirldslabs.com>